--- a/src/GruntTest/wwwroot/Views/Partials/blsTable.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable.html
@@ -1,12 +1,12 @@
 <div class="page-header">
     <h1>blsTable example</h1>
 </div>
-<!--<pre>{{model.data|json}}</pre>--> 
+<!-- <pre>{{model.data|json}}</pre> -->
 <bls-table ng-model="model.data"
            func-async="query(pageIndex, pageLength, searchedText, orderBy, order)"
            options="options"
            total-items="model.totalItems"
-           >
+           get-children="getChildren">
     <bls-cols>
         <bls-col resize dragable sort field-name="id"></bls-col>
         <bls-col resize dragable sort field-name="name"></bls-col>
