--- a/src/GruntTest/wwwroot/templates/blsTable.html
+++ b/src/GruntTest/wwwroot/templates/blsTable.html
@@ -1,6 +1,6 @@
 <div class="bls-table-container">
     <div ng-class="{'overlay':isLoading}"><div ng-show="isLoading"><div class="double-bounce1"></div><div class="double-bounce2"></div></div></div>
-    <bls-tool-bar></bls-tool-bar>
+    <bls-tool-bar ng-hide="options.toolbar.hide"></bls-tool-bar>
     <table class="table table-hover table-striped table-bordered blsGrid">
         <thead ng-mousedown="resizeStart($event)" ng-mouseup="resizeEnd($event)">
             <bls-header></bls-header>
