HFA: passer à ui-router

--- a/src/GruntTest/wwwroot/Views/Partials/blsTable.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable.html
@@ -6,7 +6,7 @@
            func-async="query(pageIndex, pageLength, searchedText, orderBy, order,filters)"
            options="options"
            total-items="model.totalItems"
-           get-children="getChildren">
+           get-children="getChildren" child-items-prop="Friends">
     <bls-cols>
         <bls-col resize dragable sort field-name="id"></bls-col>
         <bls-col resize dragable sort field-name="name"></bls-col>
