--- a/src/GruntTest/wwwroot/Content/Styles/styles.css
+++ b/src/GruntTest/wwwroot/Content/Styles/styles.css
@@ -1,3 +1,30 @@
+.navbar-form {
+  padding: 0 !important;
+  margin: 10px 2px !important;
+}
+.navbar-form .form-control {
+  padding: 5px 15px;
+  height: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+}
+.navbar-form .btn-search {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: none;
+  background: 0 0;
+  -webkit-border-radius: 0 30px 30px 0;
+  -moz-border-radius: 0 30px 30px 0;
+  border-radius: 0 30px 30px 0;
+}
+.form-control-clear {
+  pointer-events: visible !important;
+}
 .highlighted{
     background-color:yellow;
 }
