--- a/src/GruntTest/wwwroot/Views/Partials/blsTable.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable.html
@@ -8,13 +8,19 @@
     <bls-cols>
         <bls-col resize dragable sort field-name="id"></bls-col>
         <bls-col resize dragable sort field-name="name"></bls-col>
-        <bls-col resize dragable field-name="company"></bls-col>
-        <bls-col resize dragable sort title="Mail" field-name="email">{{::field|lowercase}}</bls-col>
+        <bls-col resize dragable field-name="company">
+            <a href="javascript: void(0)" ng-click="options.functions[0](::data)">
+                {{::field}}
+            </a>
+        </bls-col>
+        <bls-col resize dragable sort title="Mail" field-name="email">{{::field|uppercase}}</bls-col>
         <bls-col resize title="Photo Profile" field-name="picture">
             <header><i class="fa fa-exclamation-triangle" style="color: #333" title="{{::field.title}}"></i></header>
             <bls-td><img style="height:18px;margin: 0 auto;" class="img-responsive" src="{{::field}}" alt="" /></bls-td>
         </bls-col>
-        <bls-col resize field-name="age"></bls-col>
+        <bls-col resize field-name="isActive">
+            <i ng-if="::field" class="fa fa-check" style="color: #333"></i>
+        </bls-col>
         <bls-col resize title="Actions" is-actions="true"></bls-col>
     </bls-cols>
 </bls-table>
