--- a/src/GruntTest/wwwroot/Views/Partials/blsTable.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable.html
@@ -9,7 +9,7 @@
         <bls-col resize dragable sort field-name="id"></bls-col>
         <bls-col resize dragable sort field-name="name"></bls-col>
         <bls-col resize dragable field-name="company">
-            <a href="javascript: void(0)" ng-click="options.functions[0](::data)">
+            <a href="javascript: void(0)" ng-click="options.callbacks[0](::data)">
                 {{::field}}
             </a>
         </bls-col>
@@ -18,7 +18,7 @@
             <header><i class="fa fa-exclamation-triangle" style="color: #333" title="{{::field.title}}"></i></header>
             <bls-td><img style="height:18px;margin: 0 auto;" class="img-responsive" src="{{::field}}" alt="" /></bls-td>
         </bls-col>
-        <bls-col resize field-name="isActive">
+        <bls-col resize field-name="isActive" title="Active">
             <i ng-if="::field" class="fa fa-check" style="color: #333"></i>
         </bls-col>
         <bls-col resize title="Actions" is-actions="true"></bls-col>
