--- a/src/GruntTest/wwwroot/Content/Styles/styles.css
+++ b/src/GruntTest/wwwroot/Content/Styles/styles.css
@@ -1,33 +1,38 @@
 .navbar-form {
-  padding: 0 !important;
-  margin: 10px 2px !important;
+    padding: 0 !important;
+    margin: 10px 2px !important;
 }
-.navbar-form .form-control {
-  padding: 5px 15px;
-  height: 30px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
-}
-.navbar-form .btn-search {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 30px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border: none;
-  background: 0 0;
-  -webkit-border-radius: 0 30px 30px 0;
-  -moz-border-radius: 0 30px 30px 0;
-  border-radius: 0 30px 30px 0;
-}
+
+    .navbar-form .form-control {
+        padding: 5px 15px;
+        height: 30px;
+        -webkit-border-radius: 30px;
+        -moz-border-radius: 30px;
+        border-radius: 30px;
+    }
+
+    .navbar-form .btn-search {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 30px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        border: none;
+        background: 0 0;
+        -webkit-border-radius: 0 30px 30px 0;
+        -moz-border-radius: 0 30px 30px 0;
+        border-radius: 0 30px 30px 0;
+    }
+
 .form-control-clear {
-  pointer-events: visible !important;
+    pointer-events: visible !important;
 }
-.highlighted{
-    background-color:yellow;
+
+.highlighted {
+    background-color: yellow;
 }
+
 .content {
     padding-top: 35px;
 }
@@ -46,20 +51,25 @@
         text-overflow: ellipsis;
     }
 
+    .table th {
+        resize: horizontal;
+        position: relative;
+        padding-left: 22px !important;
+    }
+
+        .table th.fa-sort:before, .table th.fa-sort-desc:before, .table th.fa-sort-asc:before {
+            font: normal normal normal 12px/1 FontAwesome;
+            font-size: inherit;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            position: absolute;
+            bottom: 8px;
+            left: 8px;
+            opacity:0.7;
+        }
+
 bls-grid {
     position: relative;
-}
-
-.fa-sort:hover {
-    opacity: 1;
-}
-
-.fa-sort {
-    opacity: 0.5;
-}
-
-.fa-sort-asc, .fa-sort-desc {
-    opacity: 0.8;
 }
 
 .bls-table-container {
