HFA: Fix styles

--- a/src/GruntTest/wwwroot/Content/Styles/styles.css
+++ b/src/GruntTest/wwwroot/Content/Styles/styles.css
@@ -118,6 +118,7 @@ bls-grid {
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
+    cursor: pointer
 }
 
     .blsGrid th.colHeader a:hover {
