--- a/src/GruntTest/wwwroot/Views/Partials/blsTable.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable.html
@@ -4,7 +4,8 @@
            func-async="query(pageIndex, pageLength, searchedText, sortTable, filters)"
            options="options"
            total-items="model.totalItems"
-           get-children="getChildren" child-items-prop="Friends">
+           get-children="getChildren" child-items-prop="Friends" 
+           id="btb">
     <bls-cols>
         <bls-col resize dragable sort field-name="id"></bls-col>
         <bls-col resize dragable title="Le nom" sort field-name="name"></bls-col>
