--- a/src/GruntTest/wwwroot/Views/Partials/blsTable_sample.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable_sample.html
@@ -4,7 +4,7 @@
            func-async="query(pageIndex, pageLength, searchedText, sortTable, filters)"
            options="options"
            total-items="model.totalItems"
-           id="btbl2">
+           id="btbSample">
     <bls-cols>
         <bls-col resize dragable sort field-name="id"></bls-col>
         <bls-col resize dragable title="Le nom" sort field-name="name"></bls-col>
