HFA detail Person

--- a/src/GruntTest/wwwroot/Views/Partials/blsTable_sample.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable_sample.html
@@ -23,7 +23,7 @@
         </bls-col>
         <bls-col resize title="Actions">
             <span data-placement="top" data-toggle="tooltip" title="Modifier">
-                <a class="btn btn-primary btn-icon btn-circle btn-sm" ui-sref="docs"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-primary btn-icon btn-circle btn-sm" ui-sref=".detail(id: ::row.id)"><span class="glyphicon glyphicon-pencil"></span></a>
             </span>
             <span data-placement="top" data-toggle="tooltip" title="Supprimer">
                 <a class="btn btn-danger btn-icon btn-circle btn-sm" href="javascript: void(0)" ng-click="options.callbacks[1](::row)"><span class="glyphicon glyphicon-trash"></span></a>
