--- a/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
+++ b/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
@@ -2,37 +2,74 @@
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">ID:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="ID" placeholder="Enter ID">
+            <input type="text" class="form-control" id="ID" ng-model="model.id" readonly>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">Name:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="name" placeholder="Enter Name">
+            <input type="text" ng-model="model.name" class="form-control" id="name" placeholder="Enter Name" required>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">Company:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="company" placeholder="Enter Company">
+            <input type="text" class="form-control" ng-model="model.company" id="company" placeholder="Enter Company">
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">Email:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="email" placeholder="Enter email">
+            <input type="email" class="form-control" id="email" ng-model="model.email" placeholder="Enter email">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="phone">Phone:</label>
+        <div class="col-sm-10">
+            <input type="tel" class="form-control" id="phone" ng-model="model.phone" placeholder="Enter phone">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="eyeColor">EyeColor:</label>
+        <div class="col-sm-10">
+            <input type="color" class="form-control" id="eyeColor" ng-model="model.eyeColor" placeholder="Enter eyeColor">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="age">Age:</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="age" ng-model="model.age" placeholder="Enter age">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="registered">Registered:</label>
+        <div class="col-sm-10">
+            <input type="datetime" class="form-control" id="registered" ng-model="model.registered" placeholder="Enter registered">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="picture">Picture:</label>
+        <div class="col-sm-10">
+            <img  id="picture" src="{{model.picture}}"/>
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <div class="checkbox">
-                <label><input type="checkbox"> Remember me</label>
+                <label><input type="checkbox" ng-model="model.isActive"> Remember me</label>
             </div>
         </div>
     </div>
+
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="button" class="btn btn-default" ng-click="reset()">
+                <span class="glyphicon glyphicon-erase" aria-hidden="true"></span> Reset
+            </button>
+            <button type="button" ng-click="update(model)" class="btn btn-default">
+                <span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span> Save
+            </button>
         </div>
     </div>
+    <pre>user = {{model | json}}</pre>
 </form>
