--- a/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
+++ b/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
@@ -1,4 +1,4 @@
-﻿<form class="form-horizontal" role="form">
+﻿<form class="form-horizontal" role="form" name="myForm" novalidate>
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">ID:</label>
         <div class="col-sm-10">
@@ -14,7 +14,7 @@
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">Company:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" ng-model="model.company" id="company" placeholder="Enter Company">
+            <input type="text" class="form-control" ng-model="model.company" id="company" placeholder="Enter Company" resettable >
         </div>
     </div>
     <div class="form-group">
