--- a/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
+++ b/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
@@ -1,4 +1,4 @@
-﻿<form class="form-horizontal" role="form" name="myForm" novalidate>
+﻿<form class="form-horizontal" role="form" name="myForm" novalidate unsaved-warning-form>
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">ID:</label>
         <div class="col-sm-10">
@@ -63,10 +63,10 @@
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="button" class="btn btn-default" ng-click="reset()">
+            <button type="reset" class="btn btn-default">
                 <span class="glyphicon glyphicon-erase" aria-hidden="true"></span> Reset
             </button>
-            <button type="button" ng-click="update(model)" class="btn btn-default">
+            <button type="submit" ng-click="update(model)" class="btn btn-default">
                 <span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span> Save
             </button>
         </div>
