--- a/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.allowDrag.html
+++ b/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.allowDrag.html
@@ -7,7 +7,7 @@
 <div class="description"><div class="bls-components-directive-page bls-components-directive-allowdrag-page"><p>allowDrag directive</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
-<ul class="dependencies"><li><code ng:non-bindable=""><a href="api/blsTable">blsTable</a></code>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="api/bls_components.directive:blsTable">blsTable</a></code>
 </li>
 </ul>
 <h2 id="usage">Usage</h2>
