--- a/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.blsCol.html
+++ b/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.blsCol.html
@@ -4,13 +4,12 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="bls-components-directive-page bls-components-directive-blscol-page"><p>Resize textarea automatically to the size of its text content.</p>
-<p><strong>Note:</strong> ie&lt;9 needs polyfill for window.getComputedStyle</p>
+<div class="description"><div class="bls-components-directive-page bls-components-directive-blscol-page"><p>Collect information&#39;s column</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
-<ul class="dependencies"><li><code ng:non-bindable=""><a href="api/ng.$log">$log</a></code>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="api/bls_components.directive:blsTable">blsTable</a></code>
 </li>
-<li><code ng:non-bindable=""><a href="api/ng.$timeout">$timeout</a></code>
+<li><code ng:non-bindable=""><a href="api/bls_components.directive:blsCols">blsCols</a></code>
 </li>
 </ul>
 <h2 id="usage">Usage</h2>
@@ -22,16 +21,8 @@
 </div>
 </div>
 <h2 id="example">Example</h2>
-<div class="example"><div class="bls-components-directive-page bls-components-directive-blscol-page"><h4 id="example_source">Source</h4>
-<div source-edit="bls_components" source-edit-deps="angular.js" source-edit-html="index.html" source-edit-css="" source-edit-js="" source-edit-json="" source-edit-unit="" source-edit-scenario=""></div>
-<div class="tabbable"><div class="tab-pane" title="index.html">
-<pre class="prettyprint linenums" ng-set-text="index.html" ng-html-wrap-loaded="bls_components angular.js"></pre>
-<script type="text/ng-template" id="index.html">
-    <textarea ng-model="text"rx-autogrow class="input-block-level"></textarea>
-    <pre>{{text}}</pre>
-</script>
-</div>
-</div><h4 id="example_demo">Demo</h4>
-<div class="well doc-example-live animate-container" ng-embed-app="bls_components" ng-set-html="index.html" ng-eval-javascript=""></div>
+<div class="example"><div class="bls-components-directive-page bls-components-directive-blscol-page"><pre class="prettyprint linenums">
+&lt;bls-col resize dragable title="Le nom" sort field-name="name"&gt;&lt;/bls-col&gt;
+</pre>
 </div></div>
 </div>
