--- a/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.blsTable.html
+++ b/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.blsTable.html
@@ -4,8 +4,8 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="bls-components-directive-page bls-components-directive-blstable-page"><p>blsTable directive</p>
-<p><strong>Note:</strong> note</p>
+<div class="description"><div class="bls-components-directive-page bls-components-directive-blstable-page"><p>blsTable directive
+<strong>Note:</strong> Id must be specified</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
 <ul class="dependencies"><li><code ng:non-bindable=""><a href="api/ng.$log">$log</a></code>
@@ -18,7 +18,6 @@
 &lt;/bls-table&gt;</pre>
 <h3 id="usage_directive-info">Directive info</h3>
 <div class="directive-info"><ul><li>This directive creates new scope.</li>
-<li>This directive executes at priority level -1.</li>
 </ul>
 </div>
 </div>
@@ -30,13 +29,49 @@
 <li><h3 id="properties_$modelvalue">$modelValue</h3>
 <div class="$modelvalue"><div class="bls-components-directive-page bls-components-directive-blstable-page"><p>The value in the model that the control is bound to.</p>
 <p>data: &#39;=ngModel&#39;,
-                        funcAsync: &#39;&amp;&#39;,
-                        getChildren: &#39;&amp;&#39;,
-                        options: &#39;=&#39;,
-                        totalItems: &#39;=&#39;,
-                        childItemsProp: &#39;@&#39;</p>
+                            funcAsync: &#39;&amp;&#39;,
+                            getChildren: &#39;&amp;&#39;,
+                            options: &#39;=&#39;,
+                            totalItems: &#39;=&#39;,
+                            childItemsProp: &#39;@&#39;</p>
 </div></div>
 </li>
 </ul>
 </div>
+<h2 id="example">Example</h2>
+<div class="example"><div class="bls-components-directive-page bls-components-directive-blstable-page"><pre class="prettyprint linenums">
+&lt;bls-table ng-model="model.data"
+     func-async="query(pageIndex, pageLength, searchedText, sortTable, filters)"
+     options="options"
+     total-items="model.totalItems"
+     id="btbSampleExample"&gt;
+&lt;bls-cols&gt;
+ &lt;bls-col resize dragable sort field-name="id"&gt;&lt;/bls-col&gt;
+ &lt;bls-col resize dragable title="Le nom" sort field-name="name"&gt;&lt;/bls-col&gt;
+ &lt;bls-col resize dragable field-name="company"&gt;
+     &lt;a title="company!" href="javascript: void(0)" ng-click="options.callbacks[0](::row)"&gt;
+         {{::row.company}}
+     &lt;/a&gt;
+ &lt;/bls-col&gt;
+ &lt;bls-col resize dragable sort title="Mailing de Monsieur" field-name="email"&gt;{{::row.email|uppercase}}&lt;/bls-col&gt;
+ &lt;bls-col resize title="Photo de Profile" field-name="picture"&gt;
+     &lt;header&gt;&lt;i class="fa fa-exclamation-triangle" style="color: #333" title="{{::row.picture}}"&gt;&lt;/i&gt;&lt;/header&gt;
+     &lt;bls-td&gt;&lt;img style="height:18px;margin: 0 auto;" class="img-responsive" src="{{::row.picture}}" alt="" /&gt;&lt;/bls-td&gt;
+ &lt;/bls-col&gt;
+ &lt;bls-col resize field-name="isActive" title="Active"&gt;
+     &lt;i ng-if="::row.isActive" class="fa fa-check" style="color: #333"&gt;&lt;/i&gt;
+ &lt;/bls-col&gt;
+ &lt;bls-col resize title="Actions"&gt;
+     &lt;span data-placement="top" data-toggle="tooltip" title="Modifier"&gt;
+         &lt;a class="btn btn-primary btn-icon btn-circle btn-sm" ui-sref=".detail({id: ::row.id})"&gt;&lt;span class="glyphicon glyphicon-pencil"&gt;&lt;/span&gt;&lt;/a&gt;
+     &lt;/span&gt;
+     &lt;span data-placement="top" data-toggle="tooltip" title="Supprimer"&gt;
+         &lt;a class="btn btn-danger btn-icon btn-circle btn-sm" href="javascript: void(0)" ng-click="options.callbacks[1](::row)"&gt;&lt;span class="glyphicon glyphicon-trash"&gt;&lt;/span&gt;&lt;/a&gt;
+     &lt;/span&gt;
+ &lt;/bls-col&gt;
+&lt;/bls-cols&gt;
+&lt;/bls-table&gt;
+</pre>
+<p><strong>Note:</strong> problem with save localStorage settings on ie</p>
+</div></div>
 </div>
