--- a/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.blsHeader.html
+++ b/src/GruntTest/wwwroot/docs/partials/api/bls_components.directive.blsHeader.html
@@ -5,7 +5,7 @@
 </h1>
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="bls-components-directive-page bls-components-directive-blsheader-page"><p>Compile Headers</p>
-<p><strong>Note:</strong> This is internal directive</p>
+<p><strong>Note:</strong> This is an internal directive</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
 <ul class="dependencies"><li><code ng:non-bindable=""><a href="api/blsTable">blsTable</a></code>
