--- a/src/GruntTest/wwwroot/Views/Partials/blsTable_sample.html
+++ b/src/GruntTest/wwwroot/Views/Partials/blsTable_sample.html
@@ -1,5 +1,5 @@
 <!-- <pre>{{model.data|json}}</pre> -->
-    
+    <bls-dynamic-date ng-model="pastTime"></bls-dynamic-date>
 <bls-table ng-model="model.data"
            func-async="query(pageIndex, pageLength, searchedText, sortTable, filters)"
            options="options"
