--- a/src/GruntTest/wwwroot/Views/Partials/resizableTable.html
+++ b/src/GruntTest/wwwroot/Views/Partials/resizableTable.html
@@ -1,5 +1,7 @@
 <!--<pre>{{model.data|json}}</pre>--> 
-    
+    <header>
+        <button class="btn btn-primary" ng-click="resetResizeColumn()">Reset sizes</button>
+    </header>
 <table class="table">
     <thead>
         <tr>
