--- a/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
+++ b/src/GruntTest/wwwroot/Views/Partials/detailPerson.html
@@ -1,4 +1,4 @@
-﻿<form class="form-horizontal" role="form" name="myForm" novalidate unsaved-warning-form>
+﻿<form class="form-horizontal" role="form" name=myForm novalidate detect-changments="true">
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">ID:</label>
         <div class="col-sm-10">
